Bug 665315 - OOPP Contextmenu loses messages; r=jmathies